--- a/src/app/alumno/pages/dashboard/dashboard.component.html
+++ b/src/app/alumno/pages/dashboard/dashboard.component.html
@@ -214,7 +214,7 @@
 </div>
 
 
-<!-- <div class="row" style="margin: 1%;">
+<div class="row" style="margin: 1%;">
     <div class="col-sm-12 col-md-6 col-lg-6 row">
         <div class="col-sm-12 col-md-12 col-lg-12 column-set mb-4">
             <div class="card border-0 h-100">
@@ -754,4 +754,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
