--- a/src/app/alumno/pages/academico/detalle/detalle.component.html
+++ b/src/app/alumno/pages/academico/detalle/detalle.component.html
@@ -12,6 +12,8 @@
     </div>
 </div>
 <div class="row">
+    <!-- <iframe src="https://drive.google.com/file/d/1UM0JeMv_9doVSuOXW9xiTclyj5YvyIy0/preview" width="640" 
+        height="480" allow="autoplay"></iframe> -->
     <div class="col-sm-12 col-md-12 col-lg-6" *ngIf="course">
         <div class="card mx-2 border-0 bg-white">
             <div class="card-header" *ngIf="class_module">
@@ -189,11 +191,23 @@
                                 </ul>
                             </li>
                             <li class="treeview-list-item">
-                                <a data-bs-toggle="collapse" href="#Bloque-{{i+1}}-3" role="button" aria-expanded="false">
+                                <a data-bs-toggle="collapse" href="#Bloque-{{i+1}}-3" role="button" aria-expanded="false" (click)="getEvaluationsHans(data.id)">
                                     <p class="treeview-text text-uppercase">evaluaciones</p>
                                 </a>
                                 <ul class="collapse treeview-list" id="Bloque-{{i+1}}-3" data-show="false">
-                                    <li class="treeview-list-item">
+                                    <div *ngFor="let evaluacion of evaluations" >
+                                        <li class="treeview-list-item">
+                                            <div class="treeview-item">
+                                                <a class="flex-1" href="javascript:void(0)" (click)="action_Evaluation(evaluacion)">
+                                                    <p class="treeview-text">
+                                                        <span class="me-2 bi bi-file-earmark-medical text-blue"></span>
+                                                        {{evaluacion.evaluation_form.name}}
+                                                    </p>
+                                                </a>
+                                            </div>
+                                        </li>
+                                    </div>
+                                    <!-- <li class="treeview-list-item">
                                         <div class="treeview-item">
                                             <a class="flex-1" href="javascript:void(0)">
                                                 <p class="treeview-text">
@@ -202,17 +216,7 @@
                                                 </p>
                                             </a>
                                         </div>
-                                    </li>
-                                    <li class="treeview-list-item">
-                                        <div class="treeview-item">
-                                            <a class="flex-1" href="javascript:void(0)">
-                                                <p class="treeview-text">
-                                                <span class="me-2 bi bi-file-earmark-medical text-blue"></span>
-                                                    Examen 2
-                                                </p>
-                                            </a>
-                                        </div>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </li>
                             <li class="treeview-list-item">
@@ -277,6 +281,19 @@
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
             <hr>
             <button class="btn btn-danger text-light" (click)="closeModal()"> Cerrar</button>
+        </div>
+    </div>
+</ng-template>
+<!-- Empieza modal confirmacion-->
+<ng-template #content let-modal>
+    <app-modal-test *ngIf="exam_generated"></app-modal-test>
+    <app-modal-expired *ngIf="exam_expired"></app-modal-expired>
+    <app-modal-finalizado [id_examen]="id_examen.id" [motrar_nota]="true"
+                          [titulo]="'HAS FINALIZADO TU EXÁMEN'" *ngIf="exam_finalizado"></app-modal-finalizado>
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="modal-footer" style=" display: flex; justify-content: center;">
+            <button class="btn btn-danger" (click)="closeModalInfo()">CANCELAR</button>
+            <button class="btn btn-success" (click)="openTest(id_examen)" *ngIf="btn_iniciar_exam">INICIAR</button>
         </div>
     </div>
 </ng-template>
