--- a/src/app/examenes/pages/examen/examen.component.html
+++ b/src/app/examenes/pages/examen/examen.component.html
@@ -40,7 +40,7 @@
                                         <i class="bi bi-list-task h5 avatar avatar-40 bg-light-theme rounded"></i>
                                     </div>
                                     <div class="col">
-                                        <h6 class="fw-medium mb-0">{{respuestas[0].preguntas.texto}}</h6>
+                                        <h6 class="fw-medium mb-0 text-uppercase">{{respuestas[0].preguntas.texto}}</h6>
                                         <!-- <p class="text-secondary small">Do your best</p> -->
                                     </div>
                                 </div>
@@ -162,7 +162,7 @@
     </div>
 </ngx-spinner>
 <!--SPINNER-->
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" name = "end" size = "medium" color = "#fff" type="triangle-skew-spin">
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type="triangle-skew-spin">
     <h2 style="color: white" > CARGANDO .... </h2>
 </ngx-spinner>
 <!-- SPINNER -->
