--- a/src/app/alumno/pages/dashboard/dashboard.component.html
+++ b/src/app/alumno/pages/dashboard/dashboard.component.html
@@ -299,11 +299,11 @@
                             <div class="card-footer border-top">
                                 <div class="row">
                                     <div class="col-6">
-                                        <p class="text-secondary small mb-1">New Users</p>
-                                        <p>5 <small class="fs-12 fw-light text-secondary">This week</small></p>
+                                        <p class="text-secondary small mb-1">Asistido</p>
+                                        <p>5</p>
                                     </div>
                                     <div class="col-6 border-left-dashed">
-                                        <p class="text-secondary small mb-1">Total Users</p>
+                                        <p class="text-secondary small mb-1">Faltas</p>
                                         <p>65826</p>
                                     </div>
                                 </div>
@@ -343,11 +343,11 @@
                             <div class="card-footer border-top">
                                 <div class="row">
                                     <div class="col-6">
-                                        <p class="text-secondary small mb-1">New Device</p>
-                                        <p>2 <small class="fs-12 fw-light text-secondary">This week</small></p>
+                                        <p class="text-secondary small mb-1">Exámenes Realizados</p>
+                                        <p>2</p>
                                     </div>
                                     <div class="col-6 border-left-dashed">
-                                        <p class="text-secondary small mb-1">Total Device</p>
+                                        <p class="text-secondary small mb-1">Total Exámenes</p>
                                         <p>71521</p>
                                     </div>
                                 </div>
@@ -387,12 +387,12 @@
                             <div class="card-footer border-top">
                                 <div class="row">
                                     <div class="col-6">
-                                        <p class="text-secondary small mb-1">Hathway</p>
-                                        <p>55.68 Mbps</p>
+                                        <p class="text-secondary small mb-1">Desaprobatorias</p>
+                                        <p>55.68</p>
                                     </div>
                                     <div class="col-6 border-left-dashed">
-                                        <p class="text-secondary small mb-1">AT&T</p>
-                                        <p>70.75 Mbps</p>
+                                        <p class="text-secondary small mb-1">Aprobatorias</p>
+                                        <p>70.75</p>
                                     </div>
                                 </div>
                             </div>
@@ -435,11 +435,11 @@
                             <div class="card-footer border-top">
                                 <div class="row">
                                     <div class="col-6">
-                                        <p class="text-secondary small mb-1">Resolved</p>
+                                        <p class="text-secondary small mb-1">Clases asistidas</p>
                                         <p class="text-green">421</p>
                                     </div>
                                     <div class="col-6 border-left-dashed">
-                                        <p class="text-secondary small mb-1">In Progress</p>
+                                        <p class="text-secondary small mb-1">Total Clases</p>
                                         <p class="text-yellow">50</p>
                                     </div>
                                 </div>
