--- a/src/app/alumno/pages/perfil/perfil.component.html
+++ b/src/app/alumno/pages/perfil/perfil.component.html
@@ -81,8 +81,8 @@
                             <i class="bi bi-briefcase h5 text-theme mb-0"></i>
                         </div>
                         <div class="col">
-                            <p class="text-secondary small mb-1">Trabajo</p>
-                            <p>{{profile.user_config.info_student.profesion}}</p>
+                            <p class="text-secondary small mb-1">País</p>
+                            <p>{{profile.pais}}</p>
                         </div>
                     </div>
                     <div class="row align-items-center mb-3">
@@ -111,7 +111,7 @@
                         </div>
                         <div class="col">
                             <p class="text-secondary small mb-1">Género</p>
-                            <p>Male</p>
+                            <p>Próximamente</p>
                         </div>
                     </div>
                 </div>
