--- a/src/app/alumno/pages/academico/academico.component.html
+++ b/src/app/alumno/pages/academico/academico.component.html
@@ -39,10 +39,14 @@
                             <p class="text-secondary"><i class="bi bi-journal-bookmark avatar avatar-24 me-1"></i> <br> Semi-Presencial</p>
                         </div>
                     </div>
-                    <div class="col-2 row">
-                        <div class="col justify-content-center">
+                    <div class="col-2">
+                        <div class="d-flex justify-content-center">
                             <div class="circle-small theme-blue">
-                                <circle-progress class="d-block vm" [percent]="65" [radius]="21" [outerStrokeWidth]="4" [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" [animationDuration]="300" [showTitle]="true" [showSubtitle]="false" [titleFontSize]="'15'" [showUnits]="true" [backgroundPadding]="0"></circle-progress>
+                                <circle-progress class="d-block vm" [percent]="10" [radius]="21" [outerStrokeWidth]="4" [innerStrokeWidth]="4" 
+                                [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" 
+                                [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" 
+                                [animationDuration]="300" [showTitle]="true" [showSubtitle]="false" [titleFontSize]="'15'" 
+                                [showUnits]="true" [backgroundPadding]="0"></circle-progress>
                             </div>
                             <!-- <p class="small">11 <span class="text-green"><i class="bi bi-arrow-up fs-10"></i>3.15%</span></p> -->
                         </div>
