--- a/src/app/alumno/pages/academico/detalle/detalle.component.html
+++ b/src/app/alumno/pages/academico/detalle/detalle.component.html
@@ -3,7 +3,7 @@
     <div class="row align-items-center page-title">
         <div class="col-12 col-md mb-2 mb-sm-0">
             <h5 class="mb-0">{{course.name_diplomado}}</h5>
-            <p class="text-secondary">Bienvenid@ a tu diplomado</p>
+            <p class="text-secondary">Bienvenid@ a su diplomado</p>
         </div>
         <div class="col col-sm-auto">
         </div>
