--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <!-- background -->
-<div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('assets/img/bg-1.jpg');">
-    <img src="assets/img/bg-1.jpg" alt="" class="w-100" style="display: none;" />
+<div class="coverimg h-100 w-100 top-0 start-0 position-absolute" style="background-image: url('https://web-altux-files.s3.amazonaws.com/Correo/bg-1.jpg');">
+    <img src="https://web-altux-files.s3.amazonaws.com/Correo/bg-1.jpg" alt="" class="w-100" style="display: none;" />
 </div>
 <!-- background ends  -->
 <!-- Begin page content -->
