--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -18,24 +18,26 @@
                         <p class="text-secondary small mb-4">
                             Proporcione su usuario registrada con nosotros. Le enviaremos un enlace para restablecer la contraseña a su correo 
                             electrónico. Si ya tiene contraseña, puede iniciar sesión haciendo
-                            <a (click)="goback()" class="text-primary"> click aquí!</a>
+                            <a href="javascript:void(0);" (click)="goback()" class="text-primary"> click aquí!</a>
                         </p>
-                        <form class="mb-4 was-validated">
+                        <form [formGroup]="formLogin" class="mb-4 was-validated">
                             <!-- alert messages -->
-                            <div class="alert alert-danger fade show d-none mb-2 global-alert" role="alert">
+                            <div class="alert alert-danger fade show mb-2 global-danger" role="alert" *ngIf="isShowAlert=='danger'">
                                 <div class="row">
-                                    <div class="col"><strong>Requerido!</strong> Por favor ingrese un usuario válido.</div>
+                                    <div class="col">
+                                        <strong>Requerido!</strong> Por favor ingrese un usuario válido.
+                                    </div>
                                 </div>
                             </div>
-                            <div class="alert alert-success fade show mb-2 global-success" role="alert" *ngIf="isShowAlert">
+                            <div class="alert alert-success fade show mb-2 global-success" role="alert" *ngIf="isShowAlert=='success'">
                                 <div class="row">
                                     <div class="col-auto align-self-center">
                                         <div class="spinner-border spinner-border-sm text-success me-2" role="status">
                                             <span class="visually-hidden">Cargando...</span>
                                         </div>
                                     </div>
-                                    <div class="col ps-0 align-self-center">
-                                        <strong>Enlace de reinicio enviado!</strong><br> Revisa tu bandeja de entrada y haz click en restablecer contraseña.
+                                    <div class="col ps-0">
+                                        <strong>Enlace de reinicio enviado!</strong><br> Revisa tu bandeja de entrada.
                                     </div>
                                 </div>
                             </div>
@@ -44,17 +46,16 @@
                                 <div class="input-group input-group-lg">
                                     <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-circle"></i></span>
                                     <div class="form-floating">
-                                        <input type="text" placeholder="Usuario" value="20232023" required class="form-control border-start-0" autofocus>
+                                        <input type="text" placeholder="Usuario" required formControlName="user"
+                                            class="form-control border-start-0">
                                         <label for="floatingInput">Usuario</label>
                                     </div>
                                     <!-- submit button -->
-                                    <button class="btn btn-lg btn-theme z-index-5 btn-square-lg" type="button" id="submitforgetpassbtn" (click)="submitEmail()"><i class="bi bi-arrow-right"></i></button>
+                                    <button class="btn btn-lg btn-theme z-index-5 btn-square-lg" type="button"
+                                        (click)="submitEmail()"><i class="bi bi-arrow-right"></i></button>
                                 </div>
                             </div>
-                            <div class="invalid-feedback">Add .com at last to insert valid data </div>
-                            <!-- <div class="valid-feedback">Perfect your email is registered with us.</div> -->
                         </form>
-
                     </div>
                 </div>
             </div>
