--- a/src/app/auth/password/password.component.html
+++ b/src/app/auth/password/password.component.html
@@ -33,7 +33,7 @@
                                         </div>
                                     </div>
                                     <div class="col ps-0">
-                                        <strong>Genial!</strong> Llevándote a tu destino.
+                                        <strong>Genial!</strong> Llevándote a tu aula.
                                     </div>
                                 </div>
                             </div>
