--- a/src/app/shared/layout/content/content.component.html
+++ b/src/app/shared/layout/content/content.component.html
@@ -1,8 +1,8 @@
 <!-- background -->
 <div id="backgroundID" class="coverimg h-100 w-100 top-0 start-0 main-bg position-fixed z-index-0" 
-    style="background-image: url('../../../../assets/img/bg-1.jpg');">
+    style="background-image: url('https://web-altux-files.s3.amazonaws.com/Correo/bg-1.jpg');">
     <div class="bg-blur main-bg-overlay"></div>
-    <img src="../../../../assets/img/bg-1.jpg" alt="" style="display: none;"/>
+    <img src="https://web-altux-files.s3.amazonaws.com/Correo/bg-1.jpg" alt="" style="display: none;"/>
 </div>
 <!-- background ends  -->
 
