--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
 @import '../node_modules/ngx-lightbox/lightbox.css';
 @import "../node_modules/@yaireo/tagify/src/tagify";
 
+/* Ng-select */
+@import "../node_modules/@ng-select/ng-select/scss/default.theme.scss";
+
 @import '~ng-wizard/themes/ng_wizard.min.css';
 
 .lightbox{
