--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -45,7 +45,7 @@
                                     <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-circle"></i></span>
                                     <div class="form-floating">
                                         <input type="text" placeholder="Usuario" required 
-                                            class="form-control border-start-0" formControlName="user" autofocus>
+                                            class="form-control border-start-0" formControlName="user">
                                         <label for="floatingInput">Usuario</label>
                                     </div>
                                     <!-- submit button -->
